--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,11 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    
+    <script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
+    <!-- tag, category search -->
+    <script defer src="/js/alexpearce.js"></script>
+
   </head>
 
   <body>
