--- a/style.scss
+++ b/style.scss
@@ -273,6 +273,50 @@ nav {
   background-color: $lightGray;
 }
 
+/*Tag from https://alexpearce.me*/
+.tags {
+  padding: 0;
+  list-style-type: none;
+  font-size: 0.9em;
+  color: $darkGray;
+}
+
+.archive_list {
+  padding: 0;
+  list-style-type: none;
+}
+
+.tags li {
+  float: left;
+  margin: 0 7px;
+}
+
+.tags li a {
+  padding: 1px 12px 2px 12px;
+  color: #bcc5c8;
+}
+
+.tags li a:hover {
+  color: #5e6d74;
+}
+
+.post-tags {
+  margin: 20px 0 0 0;
+}
+/* normalize.css Clearfix */
+.cf {
+  *zoom: 1
+}
+
+.cf:before, .cf:after {
+  content: "";
+  display: table;
+}
+
+.cf:after {
+  clear: both
+}
+
 footer {
   padding: 20px 0;
   text-align: center;
