--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,3 +27,6 @@ layout: default
 
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
 </article>
+
+<!-- responsive video js -->
+<script src="/js/fluidvids.js"></script>
