--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
           
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/archive">Archive</a>
-            <a href="{{ site.baseurl }}/tags">Tags</a>
+            <a href="{{ site.baseurl }}/about/">About</a>
+            <a href="{{ site.baseurl }}/archive/">Archive</a>
+            <a href="{{ site.baseurl }}/tags/">Tags</a>
           </nav>
         </header>
       </div>
