--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,31 +2,49 @@
 layout: default
 ---
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
+<header class="header-post">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+      <div class="post-heading">
+        <h1>{{ page.title }}</h1>
+        {% if page.subtitle %}
+        <h2 class="post-subheading">{{ page.subtitle }}</h2>
+        {% endif %}
+        <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
+      </div>
+     </div>
   </div>
+</header>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+<article>
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	  {{ content }}
+	</div>
   </div>
-  
-  <br>
-
-  <div>
-    <ul class="tags post-tags cf">
-      <li>Tagged:</li>
-      {% for tag in page.tags %}
-      <li><a href="/search/?tags={{ tag }}">{{ tag | downcase }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-  <br>
-
-  {% include disqus.html disqus_identifier=page.disqus_identifier %}
 </article>
 
-<!-- responsive video js -->
-<script src="/js/fluidvids.js"></script>
+<div class="row">
+  <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <ul class="pager blog-pager">
+      {% if page.previous.url %}
+      <li class="previous">
+        <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a>
+      </li>
+      {% endif %}
+      {% if page.next.url %}
+      <li class="next">
+        <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>
+      </li>
+      {% endif %}
+    </ul>
+  </div>
+</div>
+
+{% if page.comments %}
+<div class="row disqus-comments">
+  <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    {% include disqus.html %}
+  </div>
+</div>
+{% endif %}
